fixed some line-breaks

--- a/doc/users/resources.tex
+++ b/doc/users/resources.tex
@@ -4,7 +4,7 @@
 
 \section{Project Homepage}
 
-\url{http://sserver.sourceforge.net/}
+\url{http://sserver.sourceforge.net/}\\
 \url{http://simspark.sourceforge.net/}
 
 \section{Mailing Lists}
@@ -22,7 +22,7 @@ sserver-three-d@lists.sourceforge.net
 
 \section{Thesis and Papers}
 
-\url{http://www.uni-koblenz.de/~fruit/ftp/teaching/koe03-diplomarbeit.pdf}
+\url{http://www.uni-koblenz.de/~fruit/ftp/teaching/koe03-diplomarbeit.pdf}\\
 \url{http://www.uni-koblenz.de/~fruit/ftp/teaching/rol04-diplomarbeit.pdf}
 
 \section{How to contribute?}
