added screen shot of the soccer simulation and a figure showing the dimensions of the pitch and the object markers (thanks Yuan)

--- a/doc/users/simulations.tex
+++ b/doc/users/simulations.tex
@@ -4,7 +4,21 @@
 
 \subsection{Overview}
 
+\begin{figure}[htp]
+  \centering
+  \includegraphics[width=0.8\textwidth]{fig/soccersim}
+  \caption{A screen shot of the soccer simulation with 5 vs 5 robots}
+  \label{fig:soccersim}
+\end{figure}
+
 \subsection{Environment and Objects on the Field}
+
+\begin{figure}[htp]
+  \centering
+  \includegraphics[width=0.9\textwidth]{fig/pitch}
+  \caption{The dimensions of the soccer pitch and the object markers on the field as perceived by an agent}
+  \label{fig:pitch}
+\end{figure}
 
 \subsection{Rules Judged by the Automatic Referee}
 
