--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2008-03-08  Hedayat Vatankhah  <hedayat@grad.com>
+
+	* plugin/collisionperceptor/forceresistanceperceptor.h:
+	* plugin/collisionperceptor/forceresistanceperceptor.cpp:
+	* plugin/collisionperceptor/touchperceptorhandler.cpp:
+	- dJointFeedback structs are allocated by ForceResistancePerceptor now
+
+	* lib/oxygen/simulationserver/simulationserver.cpp:
+	- (SimulationServer::Step) fixed the skipped simulation time error message
+	- (SimulationServer::RunMultiThreaded)
+	  - replaced Step() function call with a loop over SceneServer::PhysicsUpdate()
+	    (Thanks Yuan for suggestions)
+	  - added check for running descreet simulations only in multi-threaded mode
+	- (SimulationServer::UpdateDeltaTimeAfterStep) new function which updates
+	   mSumDeltaTime.
+	- EndCycle() functions are called in parallel (except RenderControl)
+
 2008-03-04  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* plugin/openglsyswx/Makefile.am:
